--- a/styles/styles.css
+++ b/styles/styles.css
@@ -102,9 +102,9 @@ section {
   padding: 1rem;
   cursor: pointer;
   background-color: var(--color-grey-4);
-  width: 55px;
+  width: 150px;
   height: 55px;
-  border-radius: 50%;
+  border-radius: 12%;   
   display: flex;
   justify-content: center;
   align-items: center;
@@ -123,10 +123,30 @@ section {
 .controls .active-btn i {
   color: var(--color-white);
 }
+.controls .control {
+  box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1);
+  transition: all 0.4s ease-in-out;
+}
+.controls .control:hover {
+  box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.3);
+  transform: translateY(-10px);
+  transition: all 0.4s ease-in-out;
+}
+.blogs .blog:hover img {
+  filter: grayscale(0);
+  transform: scale(1.1);
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.8);
+}
+.controls .control p{
+  padding-left: 11px;
+}
+.controls .control i{
+  text-align: left;
 
+}
 .theme-btn {
-  top: 5%;
-  right: 3%;
+  bottom: 5%;
+  right: 5%;
   width: 70px;
   height: 70px;
   border-radius: 50%;
@@ -168,12 +188,12 @@ section {
   left: 0;
   top: 0;
   z-index: -1;
-  clip-path: polygon(0 0, 46% 0, 79% 100%, 0% 100%);
+  clip-path: polygon(0 0, 50% 0, 79% 100%, 0% 100%);
 }
 .header-content .left-header .image {
   border-radius: var(--br-sm-2);
   height: 90%;
-  width: 68%;
+  width: 80%;
   margin-left: 4rem;
   background-color: var(--color-black);
   transition: all 0.4s ease-in-out;
